<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <ImageView
        android:id="@+id/imgClose"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/baseline_close_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgClose">

        <ImageView
            android:id="@+id/imgAvatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="32dp"
            android:src="@drawable/avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedImageView" />

        <TextView
            android:id="@+id/tvProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/tilt_warp"
            android:text="@string/profile"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imgAvatar"
            app:layout_constraintTop_toTopOf="@+id/imgAvatar" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/gabriela"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imgAvatar"
            app:layout_constraintStart_toEndOf="@+id/imgAvatar"
            app:layout_constraintTop_toBottomOf="@+id/tvProfile" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvGreetingProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/tilt_warp"
        android:text="@string/greeting_profile"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_profile" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGreetingProfile">

        <TextView
            android:id="@+id/tvHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif"
            android:text="@string/history"
            android:textColor="@color/light_blue"
            android:textSize="@dimen/dimen_24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/setting"
            android:textColor="@color/light_blue"
            android:layout_marginStart="64dp"
            android:layout_marginTop="24dp"
            android:textSize="@dimen/dimen_24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHistory" />

        <TextView
            android:id="@+id/tvHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/help"
            android:textColor="@color/light_blue"
            android:layout_marginStart="64dp"
            android:layout_marginTop="24dp"
            android:textSize="@dimen/dimen_24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSetting" />

        <TextView
            android:id="@+id/tvLogOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/logout"
            android:textColor="@color/light_blue"
            android:textSize="@dimen/dimen_24sp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="24dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHelp" />

   </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
