<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:text="Sign Up"
                android:textColor="@color/black"
                android:textSize="50dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_welcomeback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daftar_text"
                android:layout_marginTop="20dp"
                android:textSize="15sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_login"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_masuk_nama"
                style="@style/TextInputLayoutStyle"
                android:layout_marginTop="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_welcomeback">

                <com.capstone.capstonetim.ui.customview.AppDefaultEditText
                    android:id="@+id/et_nama"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/white"
                    android:background="@drawable/edit_shape"
                    android:hint="@string/nama"
                    android:textColor="@color/black"
                    android:textColorHint="@color/light_blue"
                    android:paddingStart="25dp"
                    android:paddingEnd="37dp"
                    android:inputType="textEmailAddress"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_masuk_email"
                style="@style/TextInputLayoutStyle"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/il_masuk_nama">

                <com.capstone.capstonetim.ui.customview.AppEmailEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/white"
                    android:background="@drawable/edit_shape"
                    android:hint="@string/email"
                    android:textColor="@color/black"
                    android:textColorHint="@color/light_blue"
                    android:paddingStart="25dp"
                    android:paddingEnd="37dp"
                    android:inputType="textEmailAddress"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_masuk_password"
                style="@style/TextInputLayoutStyle"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/il_masuk_email">

                <com.capstone.capstonetim.ui.customview.AppPasswordEditText
                    android:id="@+id/et_masuk_password"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:hint="@string/password"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    android:textColorHint="@color/light_blue"
                    android:background="@drawable/edit_shape"
                    android:paddingStart="25dp"
                    android:paddingEnd="37dp"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_daftar"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="40dp"
                android:text="@string/daftar"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginStart="@dimen/margin_start_end"
                android:layout_marginEnd="@dimen/margin_start_end"
                android:background="@drawable/edit_shape"
                android:backgroundTint="@color/light_blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/il_masuk_password"/>

            <TextView
                android:id="@+id/tv_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TitleText"
                android:text="Or continue with"
                android:gravity="center"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/bt_daftar"
                />

            <androidx.appcompat.widget.AppCompatButton
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="10dp"
                android:id="@+id/bt_google"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                style="@style/SubSubHeader"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/google_resize"
                android:paddingStart="20dp"
                android:paddingEnd="50dp"
                android:text="@string/google"
                android:gravity="center"
                android:layout_marginStart="@dimen/margin_start_end"
                android:layout_marginEnd="@dimen/margin_start_end"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:background="@drawable/edit_shape"
                android:backgroundTint="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_continue"/>

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/dimen_6dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.499"
                tools:layout_editor_absoluteX="0dp" />

            <View
                android:id="@+id/bg_dim"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBlackDim"
                android:elevation="@dimen/dimen_4dp"
                android:visibility="gone" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/ll_daftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <TextView
                android:id="@+id/tv_blm_punya_akun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already have an account?"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/bt_daftar"
                />

            <TextView
                android:id="@+id/bt_blm_punya_akun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Sign In"
                android:textAllCaps="false"
                android:textColor="@color/light_blue"
                android:paddingStart="10dp"
                app:layout_constraintTop_toBottomOf="@id/bt_daftar"
                />


        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>