<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvKueTimePreference"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="@font/tilt_warp"
                    android:text="@string/kue_waktu"
                    android:textColor="@color/black"
                    android:textSize="36sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvTimePreference"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/waktu"
                    android:textColor="@color/black"
                    android:textSize="22dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvKueTimePreference" />

                <com.google.android.flexbox.FlexboxLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    app:alignContent="stretch"
                    app:alignItems="stretch"
                    app:flexWrap="wrap"
                    app:layout_constraintTop_toBottomOf="@id/tvTimePreference">

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/edit_shape"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/favorit_c"
                        android:textColor="@color/black"
                        app:layout_flexBasisPercent="50%" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/edit_shape"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/favorit_a"
                        android:textColor="@color/black"
                        app:layout_alignSelf="center" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/edit_shape"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/favorit_a"
                        android:textColor="@color/black"
                        app:layout_alignSelf="flex_end" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/edit_shape"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/favorit_a"
                        android:textColor="@color/black"
                        app:layout_alignSelf="flex_end" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/edit_shape"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/favorit_a"
                        android:textColor="@color/black"
                        app:layout_alignSelf="flex_end" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/edit_shape"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/favorit_a"
                        android:textColor="@color/black"
                        app:layout_alignSelf="flex_end" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/edit_shape"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/favorit_a"
                        android:textColor="@color/black"
                        app:layout_alignSelf="flex_end" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/edit_shape"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/favorit_a"
                        android:textColor="@color/black"
                        app:layout_alignSelf="flex_end" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/edit_shape"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/favorit_a"
                        android:textColor="@color/black"
                        app:layout_alignSelf="flex_end" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/edit_shape"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/favorit_a"
                        android:textColor="@color/black"
                        app:layout_alignSelf="flex_end" />

                </com.google.android.flexbox.FlexboxLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_next"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginBottom="108dp"
        android:background="@drawable/edit_shape"
        android:backgroundTint="@color/light_blue"
        android:text="@string/next"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/dimen_6dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        tools:layout_editor_absoluteX="0dp" />

    <View
        android:id="@+id/bg_dim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlackDim"
        android:elevation="@dimen/dimen_4dp"
        android:visibility="gone" />


</androidx.constraintlayout.widget.ConstraintLayout>
